- Refactored the entire file saving systems, now able to create Quick notes (Orphan Pages), Notebooks, Sections, and Pages
- Refactor storage and UI for notebook and page creation. The HomePage now displays Notebooks and Quick Notes(OrphanPages)

- Introduced DefaultNotesStorage, replacing FileSettings. This gets user's chosen filepath and sets it as default directory to save notes

- Removed FileMetadata and NoteBookSection classes. Replaced NoteBook with GlobalMetaData, added NoteBookMetaData and SectionMetaData this contains in Directory metadata which is created with the directory for faster reads, and information of the specific directory

- Updated FileSavingServices with new directory and metadata methods

- Added PlaceholderService for text handling from input boxes

- Renamed and replaced commands for better clarity.

--- a/TwoOkNotes/Views/MainWindow.xaml
+++ b/TwoOkNotes/Views/MainWindow.xaml
@@ -16,11 +16,12 @@
 
     <Window.Resources>
         <services:FileNameConverter x:Key="FileNameConverter" />
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
 
     <Border Background="#D0F0F7"
             CornerRadius="10">
-        <Grid RenderTransformOrigin="0.567,0.537" Margin="0,0,0,10">
+        <Grid Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="114.754"/>
                 <ColumnDefinition Width="*"/>
@@ -55,15 +56,57 @@
                              Foreground="#ac3dac"
                              FontSize="14"
                              Style="{StaticResource LauncherButtonTheme}"
-                             Command="{Binding LoadAFile}"/>
+                             Command="{Binding LoadAFileCommand}"/>
 
-                <RadioButton Content="New File"
+                <RadioButton Content="New NoteBook"
                              Height="50"
                              Foreground="#ac3dac"
                              FontSize="14"
                              
                              Style="{StaticResource LauncherButtonTheme}"
-                             Command="{Binding OpenWindow}"/>
+                             Command="{Binding ToggleNotebookInputCommand }"/>
+
+                <Grid Visibility="{Binding IsNotebookInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
+                    <StackPanel>
+                        <TextBox Text="{Binding NewNotebookName, UpdateSourceTrigger=PropertyChanged}"
+                                 Width="200"
+                                 services:PlaceholderService.Placeholder="Enter notebook name" />
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+                            <RadioButton  Content="Create"
+                                    Command="{Binding CreateNotebookCommand}"
+                                    Style="{StaticResource LauncherButtonTheme}" />
+                            <RadioButton  Content="Cancel"
+                                    Command="{Binding CancelNotebookCreationCommand}"
+                                    Style="{StaticResource LauncherButtonTheme}" />
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
+
+
+                <RadioButton Content="New Page"
+                             Height="50"
+                             Foreground="#ac3dac"
+                             FontSize="14"
+                             
+                             Style="{StaticResource LauncherButtonTheme}"
+                             Command="{Binding TogglePageInputCommand}"/>
+
+                <Grid Visibility="{Binding IsPageInputVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="10">
+                    <StackPanel>
+                        <TextBox Text="{Binding NewPageName, UpdateSourceTrigger=PropertyChanged}"
+                                 Width="200"
+                                 services:PlaceholderService.Placeholder="Enter notebook name" />
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+                            <RadioButton  Content="Create"
+                                    Command="{Binding CreatePageCommand}"
+                                    Style="{StaticResource LauncherButtonTheme}" />
+                            <RadioButton  Content="Cancel"
+                                    Command="{Binding CancelPageCreationCommand}"
+                                    Style="{StaticResource LauncherButtonTheme}" />
+                        </StackPanel>
+                    </StackPanel>
+                </Grid>
 
                 <ComboBox ItemsSource="{Binding SortOptions}"
                           SelectedItem="{Binding SelectedSort, Mode=TwoWay}"
