--- a/TwoOkNotes/Views/MainWindow.xaml
+++ b/TwoOkNotes/Views/MainWindow.xaml
@@ -23,28 +23,26 @@
             CornerRadius="10">
         <Grid Margin="0,0,0,10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="114.754"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="175"/>
+                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="43.716"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="47"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
 
             <TextBlock Text="TwoOkNotes"
-                       VerticalAlignment="Top"
+                       VerticalAlignment="Center"
                        HorizontalAlignment="Center"
                        Foreground="#ac3dac"
                        FontSize="20" 
                        Grid.Column="1" 
                        Height="34" 
-                       Width="115" 
-                       Margin="0,10,0,0" 
-                       Grid.RowSpan="2" 
+                       Width="116" 
                        RenderTransformOrigin="0.505,0.5"/>
 
-            <StackPanel Grid.Row="1" Background="#A0DDE0" Margin="1,31,785,10" Grid.ColumnSpan="2">
+            <StackPanel Grid.Row="1" Background="#A0DDE0" Margin="1,31,5,10">
                 <RadioButton Content="Home"
                              Height="54"
                              Foreground="#7A0D7C"
@@ -72,7 +70,7 @@
                                  Width="200"
                                  services:PlaceholderService.Placeholder="Enter notebook name" />
 
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                             <RadioButton  Content="Create"
                                     Command="{Binding CreateNotebookCommand}"
                                     Style="{StaticResource LauncherButtonTheme}" />
@@ -97,7 +95,7 @@
                         <TextBox Text="{Binding NewPageName, UpdateSourceTrigger=PropertyChanged}"
                                  Width="200"
                                  services:PlaceholderService.Placeholder="Enter notebook name" />
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,0">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                             <RadioButton  Content="Create"
                                     Command="{Binding CreatePageCommand}"
                                     Style="{StaticResource LauncherButtonTheme}" />
@@ -126,11 +124,11 @@
             <Grid Grid.Column="1" Margin="10,30,10,10" Grid.Row="1">
                 <ScrollViewer VerticalScrollBarVisibility="Auto"
                               HorizontalScrollBarVisibility="Disabled">
-                    
+
                     <ItemsControl ItemsSource="{Binding SavedPages, Mode=TwoWay}" 
                                   Background="#E6F7FA" 
                                   Grid.ColumnSpan="2">
-                        
+
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <WrapPanel HorizontalAlignment="Center"/>
@@ -139,7 +137,7 @@
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel HorizontalAlignment="Center" Margin="10">
-                                    
+
                                     <Button Command="{Binding DataContext.LoadCurrentFileCommand, 
                                         RelativeSource={RelativeSource AncestorType=Window}}"
                                         CommandParameter="{Binding}"
@@ -148,12 +146,12 @@
                                         Background="#E6F7FA" 
                                         BorderThickness="2" 
                                         BorderBrush="#E6F7FA">
-                                        
-                                            <StackPanel>
-                                                <TextBlock Text="📄" 
+
+                                        <StackPanel>
+                                            <TextBlock Text="📄" 
                                                        FontSize="100" 
                                                        HorizontalAlignment="Center"/>
-                                            </StackPanel>
+                                        </StackPanel>
                                     </Button>
 
                                     <TextBlock Text="{Binding Name, Converter={StaticResource FileNameConverter}}"
@@ -166,7 +164,7 @@
                                                Width="100"
                                                TextWrapping="Wrap"
                                                TextTrimming="CharacterEllipsis">
-                                        
+
                                     </TextBlock>
                                 </StackPanel>
                             </DataTemplate>
@@ -174,8 +172,8 @@
                     </ItemsControl>
                 </ScrollViewer>
             </Grid>
-         
-            
+
+
         </Grid>
     </Border>
 </Window>
