--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -1,10 +1,12 @@
 ﻿<Application x:Class="TwoOkNotes.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TwoOkNotes"
+             xmlns:local="clr-namespace:TwoOkNotes" 
+             xmlns:converters="clr-namespace:TwoOkNotes.Util"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            <converters:BooleanToCollapsedConverter x:Key="BooleanToCollapsedConverter" />
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
