--- a/TwoOkNotes/App.xaml
+++ b/TwoOkNotes/App.xaml
@@ -10,6 +10,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Assets/Themes/LauncherButtonTheme.xaml"/>
                 <ResourceDictionary Source="Assets/Themes/LauncherComboBoxTheme.xaml"/>
+                <ResourceDictionary Source="Assets/Themes/ColorPickerRadioButtonTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
 
